APP03022-mrch.bff.somx.ppsomx.catalogos/kustomization/production/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
spec:
  template:
    spec:
      containers:
        - name: ${PROJECT_NAME}
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
