APP03022-mrch.bff.somx.ppsomx.catalogos/kustomization/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-oss
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ${PROJECT_NAME}-ing
spec:
  rules:
    - host: vendor.fbusinesscenter.com
      http:
        paths:
          - path: /ppsomx/catalogos/(.*)
            pathType: Prefix
            backend:
              service:
                name: ${PROJECT_NAME}-svc
                port:
                  number: 8080
